--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,8 @@
 @import "settings";
 @import "foundation";
 
+@import "base";
+
 // Or selectively include components
 // @import
 //   "foundation/components/accordion",
