--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -9115,6 +9115,7 @@ th.hide-for-touch {
 /* line 27, ../scss/_base.scss */
 .cb-top .cb-view {
   height: 18.75rem;
+  padding: 0;
 }
 @media only screen and (min-width: 40.063em) {
   /* line 27, ../scss/_base.scss */
