--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,6 +7,12 @@ $test: #4affff;
 }
 
 //-------------------
+// 共通
+//-------------------
+
+
+
+//-------------------
 // トップページ
 //-------------------
 
@@ -66,4 +72,6 @@ $test: #4affff;
 	.cb-source{
 		// height:rem-calc(300);
 	}
+
+
 }
