--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -9098,26 +9098,26 @@ th.hide-for-touch {
     display: table-cell !important;
   }
 }
-/* line 3, ../scss/_base.scss */
+/* line 13, ../scss/_base.scss */
 .test {
   border: 1px solid #4affff;
   color: black;
 }
 
-/* line 31, ../scss/_base.scss */
+/* line 24, ../scss/_base.scss */
 .cb-top nav {
   background-color: red;
 }
-/* line 34, ../scss/_base.scss */
+/* line 27, ../scss/_base.scss */
 .cb-top h1 {
   color: white;
   letter-spacing: 0.25rem;
 }
-/* line 38, ../scss/_base.scss */
+/* line 31, ../scss/_base.scss */
 .cb-top h2 {
   font-size: 0.875rem;
 }
-/* line 41, ../scss/_base.scss */
+/* line 34, ../scss/_base.scss */
 .cb-top pre {
   padding: 1.875rem;
   color: #555555;
@@ -9129,27 +9129,27 @@ th.hide-for-touch {
   border: 1px solid red;
   background-color: #222222;
 }
-/* line 50, ../scss/_base.scss */
+/* line 43, ../scss/_base.scss */
 .cb-top pre > code {
   font: inherit;
   background-color: #222222;
   border-color: #222222;
   color: #FAFAFA;
 }
-/* line 59, ../scss/_base.scss */
+/* line 52, ../scss/_base.scss */
 .cb-top .container {
   padding: 0.625rem;
 }
-/* line 62, ../scss/_base.scss */
+/* line 55, ../scss/_base.scss */
 .cb-top .container .wrap {
   margin-bottom: 10px;
 }
-/* line 66, ../scss/_base.scss */
+/* line 59, ../scss/_base.scss */
 .cb-top .cb-view {
   background-color: orange;
   height: 71%;
 }
-/* line 70, ../scss/_base.scss */
+/* line 63, ../scss/_base.scss */
 .cb-top .cb-view-wrap {
   padding: 0.125rem;
 }
@@ -9162,4 +9162,24 @@ th.hide-for-touch {
   -webkit-border-radius: 4px 4px;
   border-radius: 4px / 4px;
   background-color: #EFEFEF;
+}
+
+/* line 11, ../scss/_coyomee.scss */
+.test {
+  border: 1px solid #4affff;
+  color: black;
+}
+
+/* line 16, ../scss/_coyomee.scss */
+.height {
+  height: 10rem;
+}
+
+/* line 27, ../scss/_coyomee.scss */
+.coyo-top header h1 {
+  display: inline-block;
+}
+/* line 33, ../scss/_coyomee.scss */
+.coyo-top nav li {
+  float: left;
 }
