--- a/scss/_coyomee.scss
+++ b/scss/_coyomee.scss
@@ -75,7 +75,7 @@ $coyo-color  : #cc0044;
 		border-bottom    : 1px solid darken($coyo-bar-bg, 20%);
 		color            : white;
 		height           : rem-calc(32);
-		padding-left     : rem-calc(15); 
+		// padding-left     : rem-calc(15); 
 
 		a{
 			color : white;
