--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,10 +1,16 @@
 /**
  * Site header
  */
+$blue: blue; // #003894
+// $gray: #666;
+$white: #fdfdfd;
+
+
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
+    background-color: $blue;
 
     // Positioning context for the mobile navigation icon
     position: relative;
@@ -19,7 +25,8 @@
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        // color: $grey-color-dark;
+        color: $white;
     }
 }
 
@@ -174,6 +181,7 @@
     list-style: none;
 
     > li {
+        background-color: $white;
         margin-bottom: $spacing-unit;
     }
 }
@@ -203,7 +211,9 @@
     line-height: 1;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        // font-size: 36px;
+        font-size: 28px;
+        line-height: 1.6;
     }
 }
 
