--- a/css/main.scss
+++ b/css/main.scss
@@ -4,9 +4,11 @@
 @charset "utf-8";
 
 
+// Noto Sans Japanese (Japanese)
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 
 // Our variables
-$base-font-family: 'YuGothic',Helvetica, Arial, sans-serif;
+$base-font-family: 'Noto Sans Japanese','YuGothic',Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
@@ -51,3 +53,6 @@ $on-laptop:        800px;
         "syntax-highlighting",
         "cb.style"
 ;
+
+// Noto Sans Japanese (Japanese)
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
