new repo palette.css

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,9 +2,12 @@
 // 変数
 //-------------------
 
-$test: #4affff;
+$test          : #4affff;
 $cb-head-color : red;
 $cb-view-bg    : orange;
+$blue          : blue;
+$white         : white; 
+$black         : black;
 
 //-------------------
 // 共通
@@ -15,69 +18,57 @@ $cb-view-bg    : orange;
 	color  : black;
 }
 
+header{
+	@include background($blue);
+	color : $white;
+	// height : rem-calc(88);
+
+	h1{
+		color : $white;
+		font-size : 1rem;
+		display: inline-block; 
+		padding : rem-calc(33) 0;
+	}
+}
+
+.wrapper{
+	width: 100%;
+	height: 100%;
+	@include background(darken($white,5%));
+}
+
 //-------------------
 // トップページ
 //-------------------
 
-// .cb-top{
+.site-top{
 
-// 	nav{
-// 		background-color : $cb-head-color;
-// 		border-bottom  : 1px solid darken(red, 10%);
-// 	}
-// 	h1{
-// 		color          : white;
-// 		letter-spacing : rem-calc(4);
-// 		display        : inline-block;
-// 	}
-// 	h2{
-// 		font-size : rem-calc(14);
-// 	}
-// 	pre{
-// 		padding          : rem-calc(30);
-// 		color            : $charcoal;
-// 		font             : 14px/1.6 monaco,monospace;
-// 		overflow-x       : auto;
-// 		@include border-radius;
-// 		border           : 1px solid red;
-// 		background-color : $jet;
+	li{
+		background-color: $white;
+		padding: 0;
+		border-bottom: 1px dashed $blue;
+		border-right: 1px dashed $blue;
 
-// 		&>code{
-// 			font             : inherit;
-// 			background-color : $jet;
-// 			border-color     : $jet;
-// 			color            : $ghost;
-// 		}
-// 	}
+		a{
+			display: inline-block;
+			width: 100%;
+			height: 100%;
+			padding: 12px;
+			color: $blue;
 
-	//アイコン
+			&:hover{
+				background-color: $black;
+				color: $white;
+				// @include single-transition(0.5s);
 
-	// .fi-social-github{
-	// 	color: #333;
-	// 	font-size: 38px;
-	// 	width: 44px;
-	// 	display: inline-block;
-	// 	text-align: center;
-	// }
+				h2{
+					color: $white;
+				}
+			}
 
-	//レイアウト
-	// .container{
-	// 	padding : rem-calc(10);
-
-	// 	.wrap{
-	// 		margin-bottom : 10px;
-	// 	}
-	// }
-	// .cb-view{
-	// 	background-color : $cb-view-bg;
-	// 	height           : 71%;
-	// }
-	// .cb-view-wrap{
-	// 	padding : rem-calc(2);
-	// }
-
-	// .cb-source{
-		
-	// }
-
-// }
+			em{
+				font-style: normal;
+			}
+		}
+	}
+}
